添加windows native image 打包， 添加版本功能